--- a/Bus.html
+++ b/Bus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
   <head>
-    <title>All of us are dead</title>
+    <title>Bussiness Proposal</title>
       <link rel="icon" type="image/x-icon" href="netflix.jpg">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
