--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Indian-
     <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
+    <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
     <br>
   <div class="alert alert-dark" role="alert">
 American/Britian-
