--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ All-
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
+     <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
       <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
