--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ All-
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
+     <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
      <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
     <a href="Ran.html"><img  class="demo" src="Ran.png" alt="Flowers in Chania"></a>
       <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
@@ -90,6 +91,7 @@ Indian-
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
     <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
      <a href="Ran.html"><img  class="demo" src="Ran.png" alt="Flowers in Chania"></a>
+    <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
     <br>
   <div class="alert alert-dark" role="alert">
 American/Britian-
