--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ All-
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
      <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
      <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
+    <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     <a href="Ran.html"><img  class="demo" src="Ran.png" alt="Flowers in Chania"></a>
       <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
@@ -100,6 +101,7 @@ American/Britian-
     <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
+    <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
       <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
       <br>
 <div class="alert alert-dark" role="alert">
