--- a/The.html
+++ b/The.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tommorow war</title>
+  <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+</head>
+<body>
+    </head>
+<style>
+img {
+  width: 140px;
+  height: 240px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  .btn btn-primary {
+         display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  </style>
+  <img src="The.png" alt="Paris">
+  <br><br>
+  <a href="https://drive.google.com/file/d/15ghtd75iTgiPzwQOGg6Qsedftt5dVW9N/view?usp=sharing"><button type="button" class="btn btn-primary">Watch Now</button></a>
+</body>
+</html>
