--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ All-
     <br>
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
+     <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
@@ -95,7 +96,7 @@ Indian-
     <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
     <br>
   <div class="alert alert-dark" role="alert">
-American/Britian-
+American/Britian/Spain-
 </div>
 <br>  
     <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
@@ -103,6 +104,7 @@ American/Britian-
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
       <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
+     <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
       <br>
 <div class="alert alert-dark" role="alert">
 Anime-
