--- a/Moneykr.html
+++ b/Moneykr.html
@@ -26,6 +26,6 @@ img {
   </style>
   <img src="Moneykr.png" alt="Paris">
   <br><br>
-  <a href="https://drive.google.com/file/d/19AJoiv0mGoDQyQ5CK1jGb03w-tOYRJIM/view?usp=sharing"><button type="button" class="btn btn-primary">Watch Now</button></a>
+  <a href="#"><button type="button" class="btn btn-light">Null</button></a>
 </body>
 </html>
