--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ All-
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
-    <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
+     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
+    <a href="Moneykr.html"><img  class="demo" src="Moneykr.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
