--- a/season1MH.html
+++ b/season1MH.html
@@ -29,6 +29,10 @@ img {
   
   <a href="https://drive.google.com/file/d/11ksp0cibko0QM15TaH2Zle4KWMD2Hkmj/view"><button type="button" class="btn btn-light">Episode-1</button></a>
             <br><br>
+  <a href="https://drive.google.com/file/d/1jMDHJSBEjft_FZ2nBfRL76oWMCtb3-eL/view"><button type="button" class="btn btn-light">Episode-2</button></a>
+            <br><br>
+   <a href=" https://drive.google.com/file/d/16eT7_N9Ghs8DBzp-GL4AdFftj7VKbF2w/view"><button type="button" class="btn btn-light">Episode-3</button></a>
+            <br><br>
   
   
 </body>
