--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ All-
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
+    <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
