--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ All-
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
+    <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
@@ -93,6 +94,7 @@ Indian-
     <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
     <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
      <a href="Ran.html"><img  class="demo" src="Ran.png" alt="Flowers in Chania"></a>
+    <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
     
     <br>
   <div class="alert alert-dark" role="alert">
