--- a/season2KF.html
+++ b/season2KF.html
@@ -24,7 +24,7 @@ img {
   margin-right: auto;
   }
   </style>
-  <img src="Money.png" alt="Paris">
+  <img src="Kota.png" alt="Paris">
   <br><br>
   
   <a href="https://drive.google.com/file/d/1QpYVYisrdxUqitzym6psMlmr0E_8ZWp6/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
