--- a/Kota.html
+++ b/Kota.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kota Factory Season 2 </title>
+  <title>Kota Factory</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -11,7 +11,7 @@
 </head>
 <body>
 <br><br>
-  <a href="season1KF.html"><button type="button" class="btn btn-light">Season-2</button></a>
+  <a href="season2KF.html"><button type="button" class="btn btn-light">Season-2</button></a>
   <br><br>
   
 </body>
