--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@ All-
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
-    <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
+    <a href="Crash.html"><img  class="demo" src="Crash.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
+   <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
     <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
@@ -81,9 +82,11 @@ Korean-
     <br>
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
+     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
+     <a href="Crash.html"><img  class="demo" src="Crash.png" alt="Flowers in Chania"></a>
      <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
-     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
+     
   <br>   
 <div class="alert alert-dark" role="alert">
 Indian-
