--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ All-
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
    <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
     <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
+    <a href="Gang.html"><img  class="demo" src="Gang.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
@@ -97,6 +98,7 @@ Indian-
     <a href="Sham.html"><img  class="demo" src="Sham.png" alt="Flowers in Chania"></a>
      <a href="Ran.html"><img  class="demo" src="Ran.png" alt="Flowers in Chania"></a>
     <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
+     <a href="Gang.html"><img  class="demo" src="Gang.png" alt="Flowers in Chania"></a>
     
     <br>
   <div class="alert alert-dark" role="alert">
