--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ All-
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
+    <a href="Sweet.html"><img  class="demo" src="Sweet.png" alt="Flowers in Chania"></a>
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
      <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
