--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@ Korean-
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania">
+                                                                                        
     <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
      <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
+                                                                                 <a href="Sweet.html"><img  class="demo" src="Sweet.png" alt="Flowers in Chania"></a>
      
   <br>   
 <div class="alert alert-dark" role="alert">
