--- a/Train.html
+++ b/Train.html
@@ -1,6 +1,8 @@
 <!doctype.html>
 <html>
 	<head>
+		<link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"
 	</head>
 	<title>Train to Busan</title>
 	<body>
