--- a/Train.html
+++ b/Train.html
@@ -233,7 +233,7 @@ body .card_right__button a:hover {
         <a href='https://www.imdb.com/title/tt5700672/'>Read more</a>
       </div>
       <div class='card_right__button'>
-        <a href='#' target='_blank'>WATCH TRAILER</a>
+        <a href='https://drive.google.com/file/d/1IlIQuZCVFcfri4udMf2hIPO-tlWCXrzu/view?usp=sharing' target='_blank'>WATCH Now</a>
       </div>
     </div>
   </div>
