--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ document.onmouseup = mousehandler;
 All-
 </div>
     <br>
-    <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
+    <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Sweet.html"><img  class="demo" src="Sweet.png" alt="Flowers in Chania"></a>
