--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ All-
 Korean-
 </div>
     <br>
-    <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
+    <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania">
                                                                                         
