--- a/season1MH.html
+++ b/season1MH.html
@@ -205,8 +205,28 @@ html, body {
   </style>
   <img src="Money.png" alt="Paris">
   <br><br>
-  
-  <a href="https://drive.google.com/file/d/11ksp0cibko0QM15TaH2Zle4KWMD2Hkmj/view"><button type="button" class="btn btn-light">Episode-1</button></a>
+  <a class="Dead" href="https://drive.google.com/file/d/11ksp0cibko0QM15TaH2Zle4KWMD2Hkmj/view"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Money.png"/>
+      <h1>Episode-1</h1>
+      <h4>2022, NetFlix</h4>
+      <span class="minutes">70 min</span>
+      <p class="type">Thriller</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+      A group of robbers plan to rob the Spain's National Factory of Currency and Stamps, in order to gain 2400 euros. They take 67 hostages and remain in the space for 11 days.
+
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+  <a href="#"><button type="button" class="btn btn-light">Episode-1</button></a>
             <br><br>
   <a href="https://drive.google.com/file/d/1jMDHJSBEjft_FZ2nBfRL76oWMCtb3-eL/view"><button type="button" class="btn btn-light">Episode-2</button></a>
             <br><br>
