--- a/season1MH.html
+++ b/season1MH.html
@@ -187,6 +187,9 @@ html, body {
 .ave_back {
   background: url("https://www.gannett-cdn.com/-mm-/c03fd140debe8ad4c05cf81a5cad7ad61a12ce52/c=0-1580-2985-3266&r=x803&c=1600x800/local/-/media/2017/06/09/USATODAY/USATODAY/636326272873599176-Black-Panther-Teaser.jpg");
 }
+  .dead {
+    text-decoration: none;
+  }
   .btn btn-primary {
          display: block;
   margin-left: auto;
