--- a/season1MH.html
+++ b/season1MH.html
@@ -261,7 +261,8 @@ html, body {
       
     </div>
   </div></a>
-
+<div class="blur_back bright_back"></div>
+</div>
   <a href="https://drive.google.com/file/d/1uTxJ2Lu6ymf3eCsiiUekNwBu-z5H_ykh/view?usp=sharing"><button type="button" class="btn btn-light">Episode-4</button></a>
             <br><br>
    <a href="https://drive.google.com/file/d/1q4YJZnk1bQKeX0ssPWJBMa2TnN0_oqce/view"><button type="button" class="btn btn-light">Episode-5</button></a>
