--- a/season1MH.html
+++ b/season1MH.html
@@ -242,7 +242,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-   <a class="Dead" href="https://drive.google.com/file/d/16eT7_N9Ghs8DBzp-GL4AdFftj7VKbF2w/view"><button type="button"><div class="movie_card" id="bright">
+ <a class="Dead" href="https://drive.google.com/file/d/16eT7_N9Ghs8DBzp-GL4AdFftj7VKbF2w/view"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -254,16 +254,15 @@ html, body {
     <div class="movie_desc">
       <p class="text">
       Denver is told that Monica must be executed, as they are tracked by their mobile phones. Inspector Murillo still wants the thieves to surrender, but the Professor implements his own plans.
-
       </p>
     </div>
     <div class="movie_social">
       
     </div>
   </div></a>
-<div class="blur_back bright_back"></div>
+  <div class="blur_back bright_back"></div>
 </div>
-     <br><br>
+
   <a href="https://drive.google.com/file/d/1uTxJ2Lu6ymf3eCsiiUekNwBu-z5H_ykh/view?usp=sharing"><button type="button" class="btn btn-light">Episode-4</button></a>
             <br><br>
    <a href="https://drive.google.com/file/d/1q4YJZnk1bQKeX0ssPWJBMa2TnN0_oqce/view"><button type="button" class="btn btn-light">Episode-5</button></a>
