--- a/season1MH.html
+++ b/season1MH.html
@@ -283,28 +283,9 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
 
-   <a class="Dead" href="https://drive.google.com/file/d/1uTxJ2Lu6ymf3eCsiiUekNwBu-z5H_ykh/view?usp=sharing"><div class="movie_card" id="bright">
-  <div class="info_section">
-    <div class="movie_header">
-      <img class="locandina" src="Money.png"/>
-      <h1>Episode-4</h1>
-      <h4>2017, NetFlix</h4>
-      <span class="minutes">70 min</span>
-      <p class="type">Thriller</p>
-    </div>
-    <div class="movie_desc">
-      <p class="text">
-  The press decide to blame Inspector Murillo for the shooting of Arturo. Things escalate when it becomes clear that the hostage needs to be treated, but the thieves refuse to leave.
-      </p>
-    </div>
-    <div class="movie_social">
-      
-    </div>
-  </div></a>
-  <div class="blur_back bright_back"></div>
-</div>
+  
 
-  <a class="Dead" href=https://drive.google.com/file/d/1q4YJZnk1bQKeX0ssPWJBMa2TnN0_oqce/view""><div class="movie_card" id="bright">
+  <a class="Dead" href="https://drive.google.com/file/d/1q4YJZnk1bQKeX0ssPWJBMa2TnN0_oqce/view"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
