--- a/Train.html
+++ b/Train.html
@@ -10,11 +10,35 @@
 	@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-body {
+
+	body {
   background: #e2e2e2;
   width: 98%;
   height: 100vh;
+	margin: 0;
 }
+	* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  /* The image used */
+  background-image: url("Train.png");
+  
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  
+  /* Full height */
+  height: 100%; 
+  
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Position text in the middle of the page/image */
 body .card {
   width: 800px;
   height: 400px;
