--- a/Train.html
+++ b/Train.html
@@ -191,7 +191,7 @@ body .card_right__button a:hover {
   transition-duration: 0.5s;
 }
 		</style>
-
+<div class="bg-image"></div>
 <div class='card'>
   <div class='card_left'>
     <img src='Train.png'>
