--- a/Purple.html
+++ b/Purple.html
@@ -1,31 +1,266 @@
-<!DOCTYPE html>
+<!doctype.html>
 <html>
-<head>
-  <title>Purple Hearts</title>
-  <link rel="icon" type="image/x-icon" href="netflix.jpg">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
-</head>
-<body>
-    </head>
+	<head>
+		<link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"
+	</head>
+	<title>Train to Busan</title>
+	<body>
 <style>
-img {
-  width: 140px;
-  height: 240px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+	@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+	body {
+  width: 98%;
+  height: 100vh;
+	margin: 0;
 }
-  .btn btn-primary {
-         display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
-  </style>
-  <img src="Purple.png" alt="Paris">
-  <br><br>
-  <a href="https://drive.google.com/file/d/15GJjS5jU4TsBaVSQo4-R9pvfZhCaPjC9/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
-</body>
+	* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  /* The image used */
+  background-image: url("Purple.png");
+  
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  
+  /* Full height */
+  height: 100%; 
+  
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Position text in the middle of the page/image */
+body .card {
+  width: 800px;
+  height: 400px;
+  background: transparent;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
+}
+body .card_left {
+  width: 40%;
+  height: 400px;
+  float: left;
+  overflow: hidden;
+  background: transparent;
+}
+body .card_left img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px 0 0 10px;
+  -webkit-border-radius: 10px 0 0 10px;
+  -moz-border-radius: 10px 0 0 10px;
+  position: relative;
+}
+body .card_right {
+  width: 60%;
+  float: left;
+  background: #000000;
+  height: 400px;
+  border-radius: 0 10px 10px 0;
+  -webkit-border-radius: 0 10px 10px 0;
+  -moz-border-radius: 0 10px 10px 0;
+}
+body .card_right h1 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  text-align: left;
+  font-size: 40px;
+  margin: 30px 0 0 0;
+  padding: 0 0 0 40px;
+  letter-spacing: 1px;
+}
+body .card_right__details ul {
+  list-style-type: none;
+  padding: 0 0 0 40px;
+  margin: 10px 0 0 0;
+}
+body .card_right__details ul li {
+  display: inline;
+  color: #e3e3e3;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 0 40px 0 0;
+}
+body .card_right__rating__stars {
+  position: relative;
+  right: 160px;
+  margin: 10px 0 10px 0;
+  /***** CSS Magic to Highlight Stars on Hover *****/
+  /* hover previous stars in list */
+}
+body .card_right__rating__stars fieldset, body .card_right__rating__stars label {
+  margin: 0;
+  padding: 0;
+}
+body .card_right__rating__stars .rating {
+  border: none;
+}
+body .card_right__rating__stars .rating > input {
+  display: none;
+}
+body .card_right__rating__stars .rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  display: inline-block;
+  content: "";
+  font-family: FontAwesome;
+}
+body .card_right__rating__stars .rating > .half:before {
+  content: "";
+  position: absolute;
+}
+body .card_right__rating__stars .rating > label {
+  color: #ddd;
+  float: right;
+}
+body .card_right__rating__stars .rating > input:checked ~ label,
+body .card_right__rating__stars .rating:not(:checked) > label:hover,
+body .card_right__rating__stars .rating:not(:checked) > label:hover ~ label {
+  color: #FFD700;
+}
+body .card_right__rating__stars .rating > input:checked + label:hover,
+body .card_right__rating__stars .rating > input:checked ~ label:hover,
+body .card_right__rating__stars .rating > label:hover ~ input:checked ~ label,
+body .card_right__rating__stars .rating > input:checked ~ label:hover ~ label {
+  color: #FFED85;
+}
+body .card_right__review p {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  padding: 0 40px 0 40px;
+  letter-spacing: 1px;
+  margin: 10px 0 10px 0;
+  line-height: 20px;
+}
+body .card_right__review a {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  padding: 0 0 0 40px;
+  color: #ffda00;
+  margin: 0;
+}
+body .card_right__button {
+  padding: 0 0 0 40px;
+  margin: 30px 0 0 0;
+}
+body .card_right__button a {
+  color: #ffda00;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #ffda00;
+  padding: 10px 10px 10px 40px;
+  font-size: 12px;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/COMdoWZ.png);
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: 7% 50%;
+  border-radius: 5px;
+  transition-property: all;
+  transition-duration: 0.5s;
+}
+body .card_right__button a:hover {
+  color: #000000;
+  background-color: #ffda00;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/rFQ5dHA.png);
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: 10% 50%;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 0.5s;
+}
+		</style>
+<div class="bg-image"></div>
+<div class='card'>
+  <div class='card_left'>
+    <img src='Purple.png'>
+  </div>
+  <div class='card_right'>
+    <h1>Purple Hearts</h1>
+    <div class='card_right__details'>
+      <ul>
+        <li>2022</li>
+        <li>122 min</li>
+        <li>Romance</li>
+      </ul>
+      <div class='card_right__rating'>
+        <div class='card_right__rating__stars'>
+          <fieldset class='rating'>
+            <input id='star10' name='rating' type='radio' value='10'>
+            <label class='full' for='star10' title='10 stars'></label>
+            <input id='star9half' name='rating' type='radio' value='9 and a half'>
+            <label class='half' for='star9half' title='9.5 stars'></label>
+            <input id='star9' name='rating' type='radio' value='9'>
+            <label class='full' for='star9' title='9 stars'></label>
+            <input id='star8half' name='rating' type='radio' value='8 and a half'>
+            <label class='half' for='star8half' title='8.5 stars'></label>
+            <input id='star8' name='rating' type='radio' value='8'>
+            <label class='full' for='star8' title='8 stars'></label>
+            <input id='star7half' name='rating' type='radio' value='7 and a half'>
+            <label class='half' for='star7half' title='7.5 stars'></label>
+            <input id='star7' name='rating' type='radio' value='7'>
+            <label class='full' for='star7' title='7 stars'></label>
+            <input id='star6half' name='rating' type='radio' value='6 and a half'>
+            <label class='half' for='star6half' title='6.5 stars'></label>
+            <input id='star6' name='rating' type='radio' value='6'>
+            <label class='full' for='star6' title='6 star'></label>
+            <input id='star5half' name='rating' type='radio' value='5 and a half'>
+            <label class='half' for='star5half' title='5.5 stars'></label>
+            <input id='star5' name='rating' type='radio' value='5'>
+            <label class='full' for='star5' title='5 stars'></label>
+            <input id='star4half' name='rating' type='radio' value='4 and a half'>
+            <label class='half' for='star4half' title='4.5 stars'></label>
+            <input id='star4' name='rating' type='radio' value='4'>
+            <label class='full' for='star4' title='4 stars'></label>
+            <input id='star3half' name='rating' type='radio' value='3 and a half'>
+            <label class='half' for='star3half' title='3.5 stars'></label>
+            <input id='star3' name='rating' type='radio' value='3'>
+            <label class='full' for='star3' title='3 stars'></label>
+            <input id='star2half' name='rating' type='radio' value='2 and a half'>
+            <label class='half' for='star2half' title='2.5 stars'></label>
+            <input id='star2' name='rating' type='radio' value='2'>
+            <label class='full' for='star2' title='2 stars'></label>
+            <input id='star1half' name='rating' type='radio' value='1 and a half'>
+            <label class='half' for='star1half' title='1.5 stars'></label>
+            <input id='star1' name='rating' type='radio' value='1'>
+            <label class='full' for='star1' title='1 star'></label>
+            <input id='starhalf' name='rating' type='radio' value='half'>
+            <label class='half' for='starhalf' title='0.5 stars'></label>
+          </fieldset>
+        </div>
+      </div>
+      <div class='card_right__review'>
+	      <p>In spite of their many differences, Cassie, a struggling singer-songwriter, and Luke, a troubled Marine, agree to marry solely for military benefits. But when tragedy strikes, the line between real and pretend begins to blur..<br/></br>
+	    </br></br></p>
+        <a href='https://www.imdb.com/title/tt4614584/'>Read more</a>
+      </div>
+      <div class='card_right__button'>
+        <a href='https://drive.google.com/file/d/15GJjS5jU4TsBaVSQo4-R9pvfZhCaPjC9/view' target='_blank'>WATCH Now</a>
+      </div>
+    </div>
+  </div>
+</div>
+	</body>
 </html>
+
