--- a/Allofus.html
+++ b/Allofus.html
@@ -1,6 +1,7 @@
 <!doctype.html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
     All of us are dead season 1</title>
      <link rel="icon" type="image/x-icon" href="netflix.jpg">
