--- a/season1MH.html
+++ b/season1MH.html
@@ -305,7 +305,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
- <a class="Dead" href="#"><div class="movie_card" id="bright">
+ <a class="Dead" href="https://drive.google.com/file/d/1fq6KPpcgp-ZT_Hy1INluI-vwqScLzvrZ/view?usp=ssharing"<div class="movie_card" id="bright">
 
   <div class="info_section">
 
