--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ document.onmouseup = mousehandler;
     </a>
   </div>
 </nav><br><br>
-    <p>**For better optimization use "desktop view"in your browser</p>
+    <div class="alert alert-danger" role="alert">
+  Enable Desktop view ****
+</div>
     <br><br>
    <div class="alert alert-dark" role="alert">
 All-
