--- a/Allofus.html
+++ b/Allofus.html
@@ -193,7 +193,7 @@ html, body {
   </style>
   <body>
    
-<a class="Dead" href="episode1AllOfUs.html"><div class="movie_card" id="bright">
+<a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode1AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
