--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ if((eventbutton==2)||(eventbutton==3)) return false;
 document.oncontextmenu = mischandler;
 document.onmousedown = mousehandler;
 document.onmouseup = mousehandler;
+         alert("Enable desktop view");
 </script>
      <style>
            * {
