--- a/season1UF.html
+++ b/season1UF.html
@@ -10,10 +10,29 @@
   <title>Uncontrollably Fond</title>
 <body> 
   <br><br>
-   <a href="https://drive.google.com/file/d/1EtJwdfmCgM66ee7efCqCCQCWF4d9yA4E/view"><button type="button" class="btn btn-light">Episode-1</button></a>
+   
   
   
-
+<a class="Dead" href="https://drive.google.com/file/d/1EtJwdfmCgM66ee7efCqCCQCWF4d9yA4E/view"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Un.png" />
+      <h1>Episode-1</h1>
+      <h4>2016, K-Drama</h4>
+      <span class="minutes">60 min</span>
+      <p class="type">Romance</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+    Joon Young has trouble accepting reality and rebels where he can; No Eul accepts an envelope of hush money and loses more than her integrity.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
   
   
   
