--- a/season1UF.html
+++ b/season1UF.html
@@ -177,7 +177,7 @@ html, body {
   }
 }
 .bright_back {
-  background: url("https://assets-metrostyle.abs-cbn.com/prod/metro.style/media/assets/netflix-all-of-us-are-dead-landscape-thumbnail.jpg?ext=.jpg");
+  background: url("https://wallpaperaccess.com/full/4004443.jpg");
 }
 
 .tomb_back {
