--- a/season1UF.html
+++ b/season1UF.html
@@ -195,7 +195,7 @@ html, body {
   <a class="Dead" href="https://drive.google.com/file/d/1EtJwdfmCgM66ee7efCqCCQCWF4d9yA4E/view"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
-      <img class="locandina" src="Dead.jpeg" />
+      <img class="locandina" src="Un.png" />
       <h1>Episode-5</h1>
       <h4>2016, K-Drama</h4>
       <span class="minutes">78 min</span>
