--- a/Squid.html
+++ b/Squid.html
@@ -205,7 +205,8 @@ html, body {
       <img class="locandina" src="Squid.png" />
       <h1>Episode-1</h1>
       <h4>2016, K-Drama</h4>
-      <span class="minutes">58 min</span>    </div>
+      <span class="minutes">58 min</span>
+     <p class="type">Drama</p></div>
     <div class="movie_desc">
       <p class="text">
  Hoping to win easy money, a desperate Gi-hun agrees to take part in an enigmatic game; not long into the first round, unforeseen horrors unfold.
