--- a/Squid.html
+++ b/Squid.html
@@ -176,7 +176,7 @@ html, body {
   }
 }
 .bright_back {
-  background: url("https://c4.wallpaperflare.com/wallpaper/847/231/823/squid-game-tv-series-weapon-netflix-hd-wallpaper-preview.jpg");
+  background: url("https://images6.alphacoders.com/119/1191374.jpg");
 }
 
 .tomb_back {
