--- a/Squid.html
+++ b/Squid.html
@@ -190,28 +190,10 @@ html, body {
       text-decoration: none;
     }
   </style>
-   <a class="Dead" href="https://drive.google.com/file/d/156eXnTnHO09bPrZmnFRqad9n_I68Ax1G/view?usp=sharing"><ewdiv class="movie_card" id="bright">
-  <div class="info_section">
-    <div class="movie_header">
-      <img class="locandina" src="Squid.png" />
-      <h1>Episode-1</h1>
-      <h4>2016, K-Drama</h4>
-      <span class="minutes">58 min</span>
-     <p class="type">Drama</p></div>
-    <div class="movie_desc">
-      <p class="text">
- Hoping to win easy money, a desperate Gi-hun agrees to take part in an enigmatic game; not long into the first round, unforeseen horrors unfold.
-      </p>
-    </div>
-    <div class="movie_social">
-      
-    </div>
-  </div></a>
-  <div class="blur_back bright_back"></div>
-</div>
+   
   
    <br><br>
-  <a href=""><button type="button" class="btn btn-light">Episode-1</button></a>
+  <a href="https://drive.google.com/file/d/156eXnTnHO09bPrZmnFRqad9n_I68Ax1G/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
 <br><br>
   <a href="https://drive.google.com/file/d/1saMk5yJrQfPQ6HfETukRF_fh0y6OOHR1/view?usp=sharing"><button type="button" class="btn btn-light">Episode-2</button></a>
   <br><br>
