--- a/Allofus.html
+++ b/Allofus.html
@@ -233,7 +233,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-<a class="Dead" href="https://drive.google.com/file/d/1-7lNidDSSbsP10Mfv7tJTO6dSav5o3SM/view?usp=sharing"><div class="movie_card" id="bright">
+<a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode3AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
@@ -253,7 +253,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1oMx5h2nQCyNzmQTPEPIn6FFUAqZb30qp/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode4AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
@@ -273,7 +273,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1RQNZIuZqfwsnF4sWZAlDD8uEh4VkC2cj/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode5AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
