--- a/Allofus.html
+++ b/Allofus.html
@@ -293,7 +293,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1DNq_n-VFOrr-yTg8daHPwFfiIiy9POTk/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode6AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
