--- a/Allofus.html
+++ b/Allofus.html
@@ -334,7 +334,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1NYM-IL-xXBxcKB2HssZUrC7GI_9ZeWVz/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode7AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
