--- a/season1MH.html
+++ b/season1MH.html
@@ -306,5 +306,26 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
+   <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Money.png"/>
+      <h1>Episode-6</h1>
+      <h4>2017, NetFlix</h4>
+      <span class="minutes">70 min</span>
+      <p class="type">Thriller</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+  Raquel's name is raised when details of the negotiations with the robbers are leaked. Monica slowly heals from her bullet wound, as she grows closer to Denver.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+  
 </body>
 </html>
