--- a/season1MH.html
+++ b/season1MH.html
@@ -327,5 +327,46 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
+   <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Money.png"/>
+      <h1>Episode-7</h1>
+      <h4>2017, NetFlix</h4>
+      <span class="minutes">70 min</span>
+      <p class="type">Thriller</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+ The lines between hostage and thief are blurred, as hours of confinement lead to flirting. The Professor wants to put his plan in action to keep going with the robbery.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+  
+   <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Money.png"/>
+      <h1>Episode-8</h1>
+      <h4>2017, NetFlix</h4>
+      <span class="minutes">70 min</span>
+      <p class="type">Thriller</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+ The tunnel dig continues in earnest as a new phase begins, and the ticket printing appears to be successful. Raquel and Angel have trouble resolving their differences after the pharmacy incident.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
 </body>
 </html>
