--- a/season1MH.html
+++ b/season1MH.html
@@ -306,7 +306,7 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
-   <a class="Dead" href="#"><div class="movie_card" id="bright">
+   <a class="Dead" href="https://drive.google.com/file/d/1fq6KPpcgp-ZT_Hy1INluI-vwqScLzvrZ/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -327,7 +327,7 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
-   <a class="Dead" href="#"><div class="movie_card" id="bright">
+   <a class="Dead" href="https://drive.google.com/file/d/1xZfQAwAo7zUubAvE6F_sK6I7Kd4Ko3rj/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -348,7 +348,7 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
-   <a class="Dead" href="#"><div class="movie_card" id="bright">
+   <a class="Dead" href="https://drive.google.com/file/d/1FiNz_P_iOA97bf-y7DHpj2ifRTapLJOk/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -369,7 +369,7 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
-  <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <a class="Dead" href=" https://drive.google.com/file/d/1REJv8smslU2BjkS3E1Iy6lYqh_30AUcw/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -390,7 +390,7 @@ html, body {
   <div class="blur_back bright_back"></div>
 </div>
   
-  <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <a class="Dead" href="https://drive.google.com/file/d/1vsK-SPz6eAkqV4aVyCPvMdJVsw3vZYZ4/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -411,7 +411,7 @@ The situation of The Professor is complicated; Alberto, the ex-husband of Raquel
   <div class="blur_back bright_back"></div>
 </div>
   
-   <a class="Dead" href="#"><div class="movie_card" id="bright">
+   <a class="Dead" href="https://drive.google.com/file/d/1FERKt1E_ciJkSnLLuPaBms74vBgblGHO/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -432,7 +432,7 @@ The situation of The Professor is complicated; Alberto, the ex-husband of Raquel
   <div class="blur_back bright_back"></div>
 </div>
   
-     <a class="Dead" href="#"><div class="movie_card" id="bright">
+     <a class="Dead" href=" https://drive.google.com/file/d/1wzeC-utE8d7dSah3fIFBbYYBBcryHvmP/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
@@ -453,53 +453,11 @@ The situation of The Professor is complicated; Alberto, the ex-husband of Raquel
   <div class="blur_back bright_back"></div>
 </div>
   
- <a class="Dead" href="#"><div class="movie_card" id="bright">
+ <a class="Dead" href="https://drive.google.com/file/d/1_kFBQgK0YQpUJNEGo6UqXtTmR709wNTn/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Money.png"/>
       <h1>Episode-13</h1>
-      <h4>2017, NetFlix</h4>
-      <span class="minutes">70 min</span>
-      <p class="type">Thriller</p>
-    </div>
-    <div class="movie_desc">
-      <p class="text">
-
-      </p>
-    </div>
-    <div class="movie_social">
-      
-    </div>
-  </div></a>
-  <div class="blur_back bright_back"></div>
-</div>  
-  
-  <a class="Dead" href="#"><div class="movie_card" id="bright">
-  <div class="info_section">
-    <div class="movie_header">
-      <img class="locandina" src="Money.png"/>
-      <h1>Episode-14</h1>
-      <h4>2017, NetFlix</h4>
-      <span class="minutes">70 min</span>
-      <p class="type">Thriller</p>
-    </div>
-    <div class="movie_desc">
-      <p class="text">
-
-      </p>
-    </div>
-    <div class="movie_social">
-      
-    </div>
-  </div></a>
-  <div class="blur_back bright_back"></div>
-</div>  
-  
-   <a class="Dead" href="#"><div class="movie_card" id="bright">
-  <div class="info_section">
-    <div class="movie_header">
-      <img class="locandina" src="Money.png"/>
-      <h1>Episode-15</h1>
       <h4>2017, NetFlix</h4>
       <span class="minutes">70 min</span>
       <p class="type">Thriller</p>
