--- a/Allofus.html
+++ b/Allofus.html
@@ -354,7 +354,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-     <a class="Dead" href=""https://drive.google.com/file/d/1yT76s858U8NByJidHBE-_v3CaF7hkUA-/view?usp=sharing><div class="movie_card" id="bright">
+     <a class="Dead" href="https://drive.google.com/file/d/1yT76s858U8NByJidHBE-_v3CaF7hkUA-/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
