--- a/Allofus.html
+++ b/Allofus.html
@@ -374,7 +374,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1Ev9v39wL58aiBLr8d55pHsT7MBHhQFKZ/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode10AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
@@ -394,7 +394,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-     <a class="Dead" href="https://drive.google.com/file/d/1CCiMxEqnUW_hAtBqU7ORXyUTYYwz9JhF/view?usp=sharing"><div class="movie_card" id="bright">
+     <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode11AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
@@ -414,7 +414,7 @@ html, body {
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
-    <a class="Dead" href="https://drive.google.com/file/d/1CpuFpsZSdLv7yFC_R2ZkFi8q1DOdTTsM/view?usp=sharing"><div class="movie_card" id="bright">
+    <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode12AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Dead.jpeg" />
