--- a/Moneykr.html
+++ b/Moneykr.html
@@ -28,9 +28,26 @@ img {
 }
 
   </style>
-  <img src="moneykr.png" alt="Paris">
-  <br><br>
-  <a href="https://drive.google.com/file/d/1LvQEK3FmZYm4s190g42cEItS0EbNlQej/view"><button type="button" class="btn btn-light">Episode-1</button></a>
+  <a class="Dead" href="https://drive.google.com/file/d/1LvQEK3FmZYm4s190g42cEItS0EbNlQej/view"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Un.png" />
+      <h1>Episode-1</h1>
+      <h4>2022, k-drama</h4>
+      <span class="minutes">78 min</span>
+      <p class="type">Crime</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div> 
   <br><br>
     <a href="https://drive.google.com/file/d/1zEbSKr_PTTgqxHu7uC1ezH9VZdNA_Nlm/view"><button type="button" class="btn btn-light">Episode-2</button></a>
   <br><br>
