--- a/Moneykr.html
+++ b/Moneykr.html
@@ -21,7 +21,7 @@
   background: url("https://dl.moviesr.net/images/QpwXA.jpg")
 
   </style>
-  <a class="Dead" href="https://drive.google.com/file/d/1LvQEK3FmZYm4s190g42cEItS0EbNlQej/view"><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi1mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
@@ -43,7 +43,7 @@
 </div> 
   <br><br>
     
-   <a class="Dead" href=""><div class="movie_card" id="bright">
+   <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi2mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
@@ -65,7 +65,7 @@
 </div> 
   <br><br>
   
-  <a class="Dead" href=""><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi3mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
@@ -87,7 +87,7 @@
 </div> 
   <br><br>
   
-  <a class="Dead" href=""><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi4mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
@@ -109,7 +109,7 @@
 </div> 
   <br><br>
   
-  <a class="Dead" href=""><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi5mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
@@ -131,7 +131,7 @@
 </div> 
   <br><br>
   
-   <a class="Dead" href=""><div class="movie_card" id="bright">
+   <a class="Dead" href="https://shujaat09.github.io/moneykr.github.io/epi6mhkr.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="moneykr.png" />
