--- a/Moneykr.html
+++ b/Moneykr.html
@@ -53,9 +53,10 @@
       <p class="type">Crime</p>
     </div>
     <div class="movie_desc">
-      <p class="text">
-  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+      <p class="text"> 
+        Seon Woojin waits for a crack in the thieves' operation; an escape plan centered around the retrieval of a hidden smartwatch puts Yun Misun in danger.
       </p>
+ 
     </div>
     <div class="movie_social">
       
@@ -76,7 +77,7 @@
     </div>
     <div class="movie_desc">
       <p class="text">
-  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+ The sound of a gunshot shakes up the Mint; dissent among the thieves reaches new heights as some believe a line has been crossed.
       </p>
     </div>
     <div class="movie_social">
@@ -98,7 +99,7 @@
     </div>
     <div class="movie_desc">
       <p class="text">
-  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+ Looking to turn a potential disaster into an opportunity, Woojin presses the Professor to allow medical personnel to enter the Mint.
       </p>
     </div>
     <div class="movie_social">
@@ -120,7 +121,7 @@
     </div>
     <div class="movie_desc">
       <p class="text">
-  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+ Cha Moohyuk hurries a plot of his own into action; a key revelation on Woojin's end threatens to unravel the Professor's strategy.
       </p>
     </div>
     <div class="movie_social">
@@ -142,7 +143,7 @@
     </div>
     <div class="movie_desc">
       <p class="text">
-  Recruited by the Professor for a big job, eight thieves storm the Unified Korea Mint; police pull together a task force.
+        As those outside the Mint panic, Woojin proposes going inside with a cameraman so the thieves can show the public that the hostages are unharmed.
       </p>
     </div>
     <div class="movie_social">
