--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Anime-
 </div>
 <br>
     <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
-    <br><br><br>
-   
+    <br>
+    <a href="LICENSE.txt">View_License</a>
 </body>
 </html>
