--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ document.onmouseup = mousehandler;
          alert("Enable desktop view");
 </script>
      <style>
-           * {
+         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+           body {
                            font-family: 'Poppins', sans-serif;
          }
                    .demo  {
@@ -37,6 +38,9 @@ document.onmouseup = mousehandler;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
                         }
+         .lic {
+             font-family: 'Poppins', sans-serif;
+         }
   </style>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -125,6 +129,6 @@ Anime-
 <br>
     <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <br>
-    <a href="LICENSE.txt">View_License</a>
+    <a class="lic" href="LICENSE.txt">View_License</a>
 </body>
 </html>
