--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body class="d-flex justify-content-center p-5">
         <div class="card">
             <div class="card-header">
-                <center><h3>Login Form</h3></center>
+                <center><h3>Netflix</h3></center>
             </div>
             <form onsubmit="login()" id="loginForm" class="card-body px-5 py-4">
                 <center><small><span id="error" style="color: red"></span></small></center>
